--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="https://lostechies.com/joshuaflanagan">older stuff</a></li>
+          <li><a href="http://blog.flimflan.com/">older still</a></li>
         </ul>
       </div>
 
